# kwin-plugins

./: .gitignore  CMakeLists.txt  README.md
config/: kwinrc  kwinrulesrc
debian/: changelog  control  copyright
plugins/decoration/: CMakeLists.txt  button.cpp  decoration.cpp  decoration.h  piscesys.json
plugins/roundedwindow/: roundedwindow.cpp
scripts/pisces_popups/: metadata.desktop  metadata.json
scripts/pisces_popups/contents/code/: main.js
scripts/pisces_scale/: metadata.desktop  metadata.json
scripts/pisces_scale/contents/code/: main.js
scripts/pisces_squash/: metadata.desktop  metadata.json
scripts/pisceslauncher/: metadata.desktop
scripts/pisceslauncher/contents/: main.js
tabbox/pisces_thumbnail/: metadata.desktop
